<resources>
    <string name="app_name">Ejercicio9AS</string>
    <string name="bienvenida">Bienvenido a la app de preguntas tipo test del imperio romano</string>
    <string name="nombrehint">introduce tu nombre</string>
    <string name="Empezar">Empezar</string>
    <string name="pregunta1">¿Cómo se llama este monumento?</string>
    <string name="respuesta1">Santiago Bernabeu</string>
    <string name="respuesta2">Coliseo</string>
    <string name="respuesta3">Vaticano</string>
    <string name="pregunta2">¿Cuál fue la capital del Imperio Romano?</string>
    <string name="respuesta21">Atenas</string>
    <string name="respuesta22">Roma</string>
    <string name="respuesta23">Alejandría</string>
    <string name="pregunta3">¿Qué emperador romano construyó el Coliseo?</string>
    <string name="respuesta31">Augusto</string>
    <string name="respuesta32">Nerón</string>
    <string name="respuesta33">Vespasiano</string>
    <string name="pregunta4">¿Quién fue el primer emperador romano?</string>
    <string name="respuesta41">Julio César</string>
    <string name="respuesta42">Augusto</string>
    <string name="respuesta43">Nerón</string>
    <string name="pregunta5">¿Cuál era el idioma principal hablado en el Imperio Romano?</string>
    <string name="respuesta51">Griego</string>
    <string name="respuesta52">Latín</string>
    <string name="respuesta53">Egipcio</string>
    <string name="atras">back</string>
    <string name="siguiente">next</string>
    <string name="animo1">Bien hecho %1$s! , sigue así.</string>
    <string name="animo2">Deberías estudiar más %1$s!.</string>
    <string name="responde">Selecciona la respuesta correcta:</string>
    <string name="aprobado10">Excelente trabajo %1$s!, has aprobado el test con ningún error, has sacado un: </string>
    <string name="aprobado">Buen trabajo %1$s!, has aprobado el test, has sacado un: </string>
    <string name="suspendido">Oh Oh que pena %1$s!, has suspendido el test con una nota de: </string>
    <string name="podio">Mejores puntuaciones:</string>
    <string name="puntuacion1">1-%1$s!</string>
    <string name="puntuacion2">2-%1$s!</string>
    <string name="puntuacion3">3-%1$s!:</string>
    <string name="volver">volver a inicio</string>




</resources>
